--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webgate/cloudee-cli",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "homepage": "https://www.cloudee-cms.com/",
   "description": "CloudeeCMS CLI template builder",
   "bin": {
@@ -15,17 +15,20 @@
   },
   "main": "index.js",
   "scripts": {
+    "pretest": "eslint --ignore-path .gitignore .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mirko Eberlein",
   "license": "Apache-2.0",
   "dependencies": {
     "adm-zip": "^0.4.14",
+    "babel-eslint": "^10.1.0",
     "esm": "^3.2.25",
     "js-yaml": "^3.13.1",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
+    "eslint": "^7.2.0",
     "prettier": "^2.0.5"
   }
 }
